--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="styles/main.css">
+    <script src="scripts/jquery-3.4.0.min.js"></script>
+    <script src="scripts/sctipts.js"></script>
 </head>
 <body>
     <div id="container-header">
@@ -37,5 +39,11 @@
     <div id="container-bottom">
         До свидания
     </div>
+    
+    <div id="toTop">Наверх</div>
+    
+    <script type="text/javascript">
+        function buttontop();
+    </script>
 </body>
 </html>
